--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#galeria">Galeria</a>
         <a href="#videos">Videos</a>
         <a href="#contato">Contato</a>
+        <a href="#equipe">Nossa Equipe</a>
       </div>
     </nav>
 
@@ -134,12 +135,10 @@
       <h1>Galeria de Fotos</h1>
 
       <div class="fotos-galeria">
-        <div class="foto1"><img src="./assets/img/1.jpg" alt="Foto 1" /></div>
-        <div class="foto1"><img src="./assets/img/2.jpg" alt="Foto 2" /></div>
-        <div class="foto1"><img src="./assets/img/3.jpg" alt="Foto 3" /></div>
-        <div class="foto1"><img src="./assets/img/4.jpg" alt="Foto 4" /></div>
-        <div class="foto1"><img src="./assets/img/5.jpg" alt="Foto 5" /></div>
-        <div class="foto1"><img src="./assets/img/6.jpg" alt="Foto 6" /></div>
+        <ul class="fotosgaleria">
+          <li><img src="./assets/img/1.jpg" alt="Foto 1" /></li>
+
+        </ul>
       </div>
     </div>
 
@@ -156,6 +155,18 @@
             alt="Preços iniciais" /></div>
       </div>
     </section>
+
+    <!-- <section class="equipe">
+      <h1 id="equipe">Nossa Equipe</h1>
+      <div class="membros-equipe fade-up">
+        <div class="membro zoom-in">
+          <img src="" alt="" />
+          <h2 class="name"></h2>
+          <p class="funcao"></p>
+        </div>
+      </div>
+
+    </section> -->
 
     <footer class="footer">
       <div class="footer-container">
@@ -196,6 +207,7 @@
   <!-- Font Awesome (apenas para ícones se desejar) -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
+  <script src="./equipe.js"></script>
 </body>
 
 </html>
