--- a/Registro.html
+++ b/Registro.html
@@ -5,27 +5,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="./assets/img/logo-ico.ico" type="image/x-icon" />
     <title>Registro</title>
 </head>
 
 <body>
 
-
     <div class="painel">
         <h1>Registro</h1>
         <form>
-            
+
             <input placeholder="digite seu nome" type="text" id="nome" name="nome" required><br><br>
 
             <input placeholder="digite sua senha" type="password" id="senha" name="senha" required><br><br>
 
-            <input placeholder="confirme sua senha" type="password" id="confirmar_senha" name="confirmar_senha" required><br><br>
+            <input placeholder="confirme sua senha" type="password" id="confirmar_senha" name="confirmar_senha"
+                required><br><br>
 
             <button type="submit">Registrar</button><br>
-            <p>já cadastrado? <a href="login.html">Faça login</a></p>
+            <p>já cadastrado? <a href="login.html">Faça login</a></p><br>
+            <a id="voltar" href="index.html">Voltar ao site</a>
         </form>
+        <style>
+            #voltar {
+                text-decoration: none;
+                color: white;
+                font-weight: bold;
+                border: 2px solid white;
+                border-radius: 5px;
+                padding: 10px;
+                
+            }
+            #voltar:hover {
+                background-color: white;
+                color: black;
+                transition: 0.5s;
+            }
+        </style>
+
     </div>
 
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <img src="./assets/img/logo.PNG" alt="Logo Beto Estofados" />
+          <p>
+            Transformando estofados há mais de 20 anos, a <strong>Beto Estofados</strong> é líder em reformas e na
+            construção de sonhos em Maceió. Nosso diferencial está no profissionalismo e na atenção aos detalhes.
+          </p>
+        </div>
+
+        <div id="contato" class="footer-contact">
+          <h3>Contato</h3>
+          <p><strong>📍 Endereço:</strong> Rua Oscalina Maria Silva, 85 Vergel do Lago - Maceió/AL</p>
+          <p><strong>📞 Whatsapp:</strong> (82) 99981-8788</p>
+          <p><strong>✉️ Email:</strong> contato@betoestofados.com</p>
+        </div>
+
+        <div class="footer-social">
+          <h3>Fale conosco</h3>
+          <div class="social-icons">
+            <a
+              href="https://api.whatsapp.com/send?phone=5582999818788&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20com%20voc%C3%AAs."><img
+                src="./assets/img/whatsapp.png" alt="Whatsapp" /></a>
+            <a href="https://www.instagram.com/betoestofadosmcz/"><img src="assets/img/Instagram.png"
+                alt="Instagram" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 Beto Estofados - Todos os direitos reservados.</p>
+      </div>
+    </footer>
 
 </body>
 <script src="./users.js"></script>
