--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#galeria">Galeria</a>
         <a href="#videos">Videos</a>
         <a href="#contato">Contato</a>
-        <a href="#equipe">Nossa Equipe</a>
+        <a href="./Registro.html">Login/Registro</a>
       </div>
     </nav>
 
@@ -109,26 +109,28 @@
 
       <div class="content-video">
         <div class="video1 video-item">
-          <video id="video1" autoplay muted loop playsinline preload="metadata">
+          <video onclick="ControlarVideo()" id="video1" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video1.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
 
         <div class="video1 video-item">
-          <video id="video2" autoplay muted loop playsinline preload="metadata">
+          <video onclick="ControlarVideo()" id="video2" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video2.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
 
         <div class="video1 video-item">
-          <video id="video3" autoplay muted loop playsinline preload="metadata">
+          <video onclick="ControlarVideo()" id="video3" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video3.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
       </div>
+
+
     </section>
 
     <div id="galeria" class="galeria fade-up">
@@ -136,7 +138,7 @@
 
       <div class="fotos-galeria">
         <ul class="fotosgaleria">
-          
+
 
         </ul>
       </div>
