--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
       </div>
     </nav>
 
+
+    <div class="aviso">
+      <h1>Este é um site demonstrativo,</h1>
+      <p>Não é um site real e não oferece serviços de verdade. as empresas podem existir, mas o site é apenas um modelo
+        criado para fins de demonstração. Para saber mais no fim da página encontra-se a rede social.</p>
+        <button class="button-aviso">Fechar</button>
+    </div>
+
+
+
     <section class="container2 fade-up">
       <div class="textos zoom-in">
         <h1>Seja Bem-Vindo(a) A Beto Estofados Mcz</h1>
