--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
 
 
     <div class="aviso">
-      <h1>Este é um site demonstrativo,</h1>
-      <p>Não é um site real e não oferece serviços de verdade. as empresas podem existir, mas o site é apenas um modelo
-        criado para fins de demonstração. Para saber mais no fim da página encontra-se a rede social.</p>
-        <button class="button-aviso">Fechar</button>
+      <h1>💡 Aviso Importante!</h1>
+      <p>
+
+        Este site é apenas uma demonstração criada para apresentar meu trabalho como desenvolvedor Front-end.
+        Atualmente, não estamos oferecendo serviços reais, mas você pode conhecer meu trabalho e entrar em contato para
+        projetos, parcerias ou desenvolvimento de sites personalizados.<br>
+
+        📩 Entre em contato: Linkdein: <a target="_blank" href="https://www.linkedin.com/in/geo-soares/">Geovane Soares</a></p>
+      <button class="button-aviso">Fechar</button>
     </div>
 
 
