--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
       <p>
 
         Este site é apenas uma demonstração criada para apresentar meu trabalho como desenvolvedor Front-end.
-        Atualmente, não estamos oferecendo serviços reais, mas você pode conhecer meu trabalho e entrar em contato para
+        Atualmente, não estamos oferecendo serviços reais nesta página, mas você pode conhecer meu trabalho e entrar em
+        contato para
         projetos, parcerias ou desenvolvimento de sites personalizados.<br>
 
-        📩 Entre em contato: Linkdein: <a target="_blank" href="https://www.linkedin.com/in/geo-soares/">Geovane Soares</a></p>
+        📩 Entre em contato: LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/geo-soares/">Geovane
+          Soares</a></p>
+      📩 Entre em contato: GitHub: <a target="_blank" href="https://github.com/GeoSoares1994">Geovane Soares</a></p>
       <button class="button-aviso">Fechar</button>
     </div>
 
@@ -82,13 +85,13 @@
           Trabalhamos com uma variedade de estilos, tecidos e acabamentos para garantir que cada
           peça seja única e reflita sua personalidade.
         </p>
-        <img src="./assets/img/lisa-amann-lDAkoo6TpWE-unsplash.jpg" alt="Projeto personalizado" />
+        <img src="./assets/img/fabricação-sob-medida.png" alt="Projeto personalizado" />
       </div>
 
       <div class="imagem">
         <h1>Imagem de Projetos Personalizados</h1>
         <p>Veja alguns exemplos de nossos projetos personalizados.</p>
-        <img src="./assets/img/francesca-tosolini-9dyitA0YIHE-unsplash.jpg" alt="Exemplos de projetos" />
+        <img src="./assets/img/personalizado.png" alt="Exemplos de projetos" />
       </div>
     </section>
 
@@ -100,21 +103,21 @@
           <h2>Reforma de Estofados</h2>
           <p>Renove seus móveis antigos com nossa reforma de estofados. Dê uma nova vida ao seu sofá, poltrona ou
             cadeira com tecidos modernos e confortáveis.</p>
-          <img src="./assets/img/hutomo-abrianto-Q_fZcn8vlWY-unsplash.jpg" alt="Reforma de estofados" />
+          <img src="./assets/img/sofareformado.png" alt="Reforma de estofados" />
         </div>
 
         <div class="serviço1 zoom-in">
           <h2>Modificação de Estofados</h2>
           <p>Renove seus móveis com nossa modificação de estofados. Dê uma nova vida ao seu sofá, poltrona ou cadeira
             com tecidos modernos e confortáveis.</p>
-          <img src="./assets/img/hutomo-abrianto-Q_fZcn8vlWY-unsplash.jpg" alt="Modificação de estofados" />
+          <img src="./assets/img/modificado.png" alt="Modificação de estofados" />
         </div>
 
         <div class="serviço1 zoom-in">
           <h2>Fabricação do seu Estofado</h2>
           <p>Fabrique seus móveis de acordo com suas necessidades. Deixe seu ambiente renovado com tecidos modernos e
             confortáveis.</p>
-          <img src="./assets/img/hutomo-abrianto-Q_fZcn8vlWY-unsplash.jpg" alt="Fabricação de estofado" />
+          <img src="./assets/img/Captura de tela 2025-10-27 205833.png" alt="Fabricação de estofado" />
         </div>
       </div>
     </section>
@@ -168,7 +171,7 @@
           <button onclick="solicitarOrcamento()" class="button-orçamento">Solicite um Orçamento</button>
         </div>
 
-        <div class="preços-iniciais-imagem"><img src="./assets/img/lisa-amann-lDAkoo6TpWE-unsplash.jpg"
+        <div class="preços-iniciais-imagem"><img src="./assets/img/sofá-contato.png"
             alt="Preços iniciais" /></div>
       </div>
     </section>
