--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
           <button onclick="solicitarOrcamento()" class="button-orçamento">Solicite um Orçamento</button>
         </div>
 
-        <div class="preços-iniciais-imagem"><img src="./assets/img/sofá-contato.png"
-            alt="Preços iniciais" /></div>
+        <div class="preços-iniciais-imagem"><img src="./assets/img/sofá-contato.png" alt="Preços iniciais" /></div>
       </div>
     </section>
 
@@ -184,6 +183,21 @@
           <h2 class="name"></h2>
           <p class="funcao"></p>
         </div>
+        <form class="form-membro">
+
+          <h2 class="h2-membro">Adicione um novo membro</h2>
+
+          <input type="text" id="nameInput" placeholder="Nome do membro">
+          <input type="text" id="funcaoInput" placeholder="Função do membro">
+         <select >
+            <option value="" disabled selected>Selecione o sexo</option>
+            <option value="Masculino">Masculino</option>
+            <option value="Feminino">Feminino</option>
+          </select>
+
+          <button type="button" class="bnt-add">Adicionar Membro</button>
+          <p class="t-mensagem"></p>
+        </form>
       </div>
 
     </section> -->
