--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#galeria">Galeria</a>
         <a href="#videos">Videos</a>
         <a href="#contato">Contato</a>
-        <!-- <a href="./Registro.html">Login/Registro</a> -->
+        <a href="./Registro.html">Login/Registro</a>
       </div>
     </nav>
 
